update bar to support correct spacing, when row is wrapped to multiple rows

--- a/app/styles/modules/_bar.scss
+++ b/app/styles/modules/_bar.scss
@@ -3,6 +3,8 @@
   flex-flow: row;
   flex-wrap: wrap;
   align-items: center;
+
+  margin-top: -(_get-space('h', 'small'));
 }
 
 @mixin bar-item(
@@ -10,6 +12,7 @@
 ) {
   flex: 0 0 if($width == 0, auto, $width);
   align-items: center;
+  margin-top: _get-space('h', 'small');
 
   > * {
     margin-bottom: 0;
